--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,15 @@ main {
   background: rgb(255, 255, 255);
 }
 .nav-tabs .nav-link.active {
-  background: rgb(255, 255, 255);;
+  background: rgb(255, 255, 255);
   border-color: var(--carolina-blue);
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .nav {
   background: rgb(255, 255, 255);
   border-color: var(--carolina-blue);
+  justify-content: flex-end;
 }
 
 .nav-link {
