--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,17 +1,12 @@
-.project {
-  position: relative;
-  transition: all 0.5s ease;
-  display: flex;
-  flex-direction: column;
+.btn-custom {
+  background-color: var(--ivory);
+  border-color: var(--attaplumbing-red);
+  color: var(--onyx);
 }
 
-.projects {
-  display: flex;
-  flex-direction: row;
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-  margin-right: calc(-0.5 * var(--bs-gutter-x));
-  margin-left: calc(-0.5 * var(--bs-gutter-x));
+.btn-custom:hover {
+  background-color: var(--attaplumbing-red);
+    color: var(--onyx);
 }
 
 .services {
@@ -19,59 +14,11 @@
   flex-direction: column;
   height: 100vh;
 }
-.project h3 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  margin: 0;
-  transition: all 0.3s ease;
-  transform: translateY(100%);
-  opacity: 0;
-}
 
 .responsive-image {
   max-width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.gitHub-image {
-  max-width: 45%;
-  height: 45%;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.project:hover .responsive-image {
-  filter: blur(5px);
-}
-
-.project:hover a {
-  text-decoration: none;
-  color: white;
-  overflow: hidden;
-}
-
-.project:active a {
-  text-decoration: underline;
-  color: var(--bs-blue);
-  overflow: hidden;
-}
-
-.project:hover h3 {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 1;
-  transform: translateY(0);
 }
 
 @media screen and (max-width: 1020px) {
