--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* SCSS RGB */
 :root {
---steel-blue: #3f88c5ff;
-  --ivory: rgb(255, 255, 255);;
+  --steel-blue: #3f88c5ff;
+  --ivory: rgb(255, 255, 255);
   --onyx: #393e41ff;
   --attaplumbing-red: #fe001aff;
 }
