--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,3 +3,13 @@
   text-shadow: 0px 0px 2px rgb(0, 0, 0);
   /* text-shadow: 1px 1px 2px rgb(209, 24, 24); */
 }
+
+.card-img,
+.card {
+  margin: 0;
+  padding: 0;
+}
+
+.card-img {
+  border: none;
+}
