--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,28 @@
 header {
   background: rgb(255, 255, 255);
-  height: 10vh;
-  display: flex;
-  align-items: center;
 }
 
 header h1 {
   font-family: "Courier New", Courier, monospace;
   -webkit-text-fill-color: rgb(15, 15, 15);
+}
+
+.nav-tabs .nav-link.active {
+  background: #ffffff;
+  border-color: var(--attaplumbing-red);
+  box-shadow: none;
+}
+
+.nav {
+  background: #ffffff;
+  border-color: var(--attaplumbing-red);
+  justify-content: flex-end;
+}
+ .nav-link {
+  color: var(--charcoal);
+}
+
+.nav-tabs .nav-link:hover {
+  border-color: var(--attaplumbing-red);
+  box-shadow: 2px 2px 5px var(--attaplumbing-red);
 }
