--- a/src/styles/YelpReviews.css
+++ b/src/styles/YelpReviews.css
@@ -12,7 +12,7 @@
 .yelp-logo-image {
   transition-property: filter;
   transition-duration: 150ms;
-  width: 10rem;
+  max-width: 12rem;
   height: auto;
   object-fit: cover;
 }
