--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,15 +1,5 @@
-.atta-shadow {
-  color: rgb(184, 0, 0);
-  text-shadow: 0px 0px 2px rgb(0, 0, 0);
-  /* text-shadow: 1px 1px 2px rgb(209, 24, 24); */
-}
-
-.card-img,
-.card {
-  margin: 0;
-  padding: 0;
-}
-
-.card-img {
-  border: none;
+@media screen and (max-width: 995px) {
+  .reviews {
+    flex-direction: column;
+  }
 }
