--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,3 +1,9 @@
+
+    .reviews {
+      display: flex;
+    }
+
+
 @media screen and (max-width: 995px) {
   .reviews {
     flex-direction: column;
