--- a/src/styles/AboutCard.css
+++ b/src/styles/AboutCard.css
@@ -1,7 +1,7 @@
-.card-img-overlay
-{
+.card-img-overlay {
   padding: 0 !important;
 }
+
 @media (max-width: 900px) {
   .card-img-overlay {
     min-width: 250px;
