--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   --gradient-right: linear-gradient(90deg, #33658aff, #86bbd8ff);
   --gradient-top-right: linear-gradient(45deg, #86bbd8ff, #f4e8c1ff);
   --gradient-top-nav: linear-gradient(45deg, #86bbd8ff, rgb(243, 243, 243));
-
   --gradient-footer: linear-gradient(
     225deg,
     rgb(255, 255, 255),
@@ -19,11 +18,12 @@
   );
 }
 main {
-  background: #ffffff;
-  margin-top: 1rem;
-  /* Adjust this based on your header height */
+  background: repeating-radial-gradient(
+    circle at 0 0,
+    var(--ivory),
+    rgb(247 247 247 / 100%) 200px
+  );
 }
-
 .header {
   position: relative;
   transition: all 0.3s ease;
