--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,28 +1,36 @@
-.nav-tabs .nav-link.active {
-  background: #ffffff;
-  border-color: var(--attaplumbing-red);
-  box-shadow: none;
-}
-
 .nav {
-  background: #ffffff;
+  background-image: linear-gradient(
+    135deg,
+    hsl(0deg 0% 100%) 3%,
+    hsl(0, 89%, 74%) 80%,
+    hsl(0deg 90% 43%) 100%
+  );
   border-color: var(--attaplumbing-red);
+  color: rgb(255, 255, 255);
   justify-content: flex-end;
 }
 
 .nav-link {
-  color: var(--charcoal);
+  color: white;
+}
+
+.nav-tabs .nav-link.active {
+  background: #ffffff;
+  border-color: transparent var(--attaplumbing-red) transparent
+    var(--attaplumbing-red);
+  box-shadow: none;
 }
 
 .nav-tabs .nav-link:hover {
   border-color: var(--attaplumbing-red);
   box-shadow: 2px 2px 5px var(--attaplumbing-red);
+  color: var(--charcoal);
+  text-decoration: none;
 }
 
-@media screen and (max-width: 500px) {
-  .nav-tabs .nav-link.active {
-    background: #ffffff;
-    border-color: var(--attaplumbing-red);
-    box-shadow: none;
-  }
+.nav-tabs .nav-link.active:hover {
+  box-shadow: none;
+  border-color: var(--attaplumbing-red) var(--attaplumbing-red) transparent
+    var(--attaplumbing-red);
+  color: black;
 }
