feature/mobile-check

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,17 +1,15 @@
 .blurImg {
-  filter: blur(4px);;
+  filter: blur(4px);
 }
 
-.blurImg.loaded >IKImage {
+.blurImg.loaded > IKImage {
   opacity: 1;
 }
 
-.blurImg > IKImage
-{
+.blurImg > IKImage {
   opacity: 0;
-  transition: opacity 200ms ease-in-out
+  transition: opacity 200ms ease-in-out;
 }
-
 
 @media screen and (max-width: 995px) {
   .reviews {
