--- a/src/styles/ContactTab.css
+++ b/src/styles/ContactTab.css
@@ -3,7 +3,17 @@
   color: var(--attaplumbing-red);
 }
 
+.contact-link-mobile {
+  text-decoration: underline;
+  color: var(--attaplumbing-red);
+}
+
 .contact-link:hover {
+  text-decoration: none;
+  color: var(--attaplumbing-red);
+}
+
+.contact-link-mobile:active {
   text-decoration: none;
   color: var(--attaplumbing-red);
 }
