--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,37 +1,37 @@
 .btn-custom-contact {
   display: inline-block;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    user-select: none;
-    border-radius: 4px;
-    transition: all 0.15s ease-in-out;
-    padding: 0.5rem 1rem;
-    border: 1px solid transparent;
-    background-color: var(--ivory);
-    border-color: var(--attaplumbing-red);
-    color: var(--onyx);
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  user-select: none;
+  border-radius: 4px;
+  transition: all 0.15s ease-in-out;
+  padding: 0.5rem 1rem;
+  border: 1px solid transparent;
+  background-color: var(--ivory);
+  border-color: var(--attaplumbing-red);
+  color: var(--onyx);
 }
 
 .btn-custom-contact-mobile {
   display: inline-block;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 4px;
-    padding: 0.5rem 1rem;
-    border: 1px solid transparent;
-    background-color: var(--ivory);
-    border-color: var(--attaplumbing-red);
-    color: var(--onyx);
-    transition:
-      background-color 0.3s,
-      color 0.3s,
-      box-shadow 0.3s;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  border: 1px solid transparent;
+  background-color: var(--ivory);
+  border-color: var(--attaplumbing-red);
+  color: var(--onyx);
+  transition:
+    background-color 0.3s,
+    color 0.3s,
+    box-shadow 0.3s;
 }
 
 .btn-custom-contact:hover {
@@ -41,8 +41,8 @@
   box-shadow: 10px 5px 5px var(--onyx);
 }
 
-.btn-custom-contact-mobile:active 
-{  background-color: var(--attaplumbing-red);
+.btn-custom-contact-mobile:active {
+  background-color: var(--attaplumbing-red);
   color: var(--ivory);
   text-shadow: 1px 1px 0px var(--onyx);
   box-shadow: 10px 5px 5px var(--onyx);
@@ -52,9 +52,9 @@
 .btn-custom-contact-mobile:disabled {
   background-color: rgb(255, 255, 255);
   border-color: darkgrey;
-  color:inherit ;
+  color: inherit;
   cursor: not-allowed;
   box-shadow: none;
   text-shadow: none;
-  opacity: .5;
+  opacity: 0.5;
 }
